force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>This is flights objext</description>
    <label>Flight</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Flight Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>