force-app/main/default/objects/Flight__c/fields/Airplane_Id__c.field-meta.xml
<CustomField>
    <fullName>Airplane_Id__c</fullName>
    <label>Airplane Id</label>
    <referenceTo>Airplane__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>