force-app/main/default/objects/Flight__c/fields/Departure_date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_date_and_Time__c</fullName>
    <description>Departure date and time</description>
    <label>Departure date and Time</label>
    <type>DateTime</type>
</CustomField>