force-app/main/default/objects/Flight__c/validationRules/Arrival_and_departure_data_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_and_departure_data_validation</fullName>
    <active>true</active>
    <description>Validation rule for Arrival date cannot be earlier than departure</description>
    <errorConditionFormula>Arrival_Date_and_Time__c &lt;  Departure_date_and_Time__c</errorConditionFormula>
    <errorMessage>Arrival Date cannot be less than departure data</errorMessage>
</ValidationRule>