force-app/main/default/objects/Flight__c/validationRules/To_and_From_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>To_and_From_Validation_rule</fullName>
    <active>true</active>
    <description>Validation for To and From</description>
    <errorConditionFormula>ISBLANK( To__c ) || ISBLANK( From__c )</errorConditionFormula>
    <errorMessage>To and From are required they cannot be empty</errorMessage>
</ValidationRule>